--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ whatsapp:
   number: 551596705888
 instagram: mhs.airgroup
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://mhsairgroup.com" # the base hostname & protocol for your site
+url: "http://mhsar.com.br" # the base hostname & protocol for your site
 
 # Build settings
 markdown: kramdown
